--- a/acloudstore/src/main/res/values/strings.xml
+++ b/acloudstore/src/main/res/values/strings.xml
@@ -6,5 +6,8 @@
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
     <string name="action_settings">Settings</string>
-
+    <string name="points">points</string>
+    <string name="nickname">Name</string>
+    <string name="gamelevel">GameLevel</string>
+    <string name="email">GameLevel</string>
 </resources>
